--- a/src/components/techstack/Techstack.scss
+++ b/src/components/techstack/Techstack.scss
@@ -1,7 +1,7 @@
 @import './../../scss/variables';
 
 .techstack {
-  height: 90vh;
+  min-height: 75vmin;
   background-color: $light-color;
 }
 
@@ -19,6 +19,6 @@
 }
 
 img {
-  height: 35%;
+  height: 40%;
   width: auto;
 }
