--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -5,9 +5,9 @@
   min-height: 40vmin;
   padding-top: 5rem;
 
-  .script-heading {
+  .contact-heading {
     text-align: center;
-    font-size: 5rem;
+    font-size: 10vmin;
   }
 }
 
@@ -17,7 +17,7 @@
 
   img {
     width: 60px;
-    margin: 5rem 2rem;
+    margin: 5vmin 2vmin;
     cursor: pointer;
   }
 
