--- a/src/components/capabilities/Capabilities.scss
+++ b/src/components/capabilities/Capabilities.scss
@@ -5,30 +5,17 @@
   min-height: 75vmin;
 }
 
-.cards {
+.capability-cards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.card {
+.capability-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-width: 320px;
-  background-color: $white-color;
-  border-radius: 0.5rem;
-  width: 320px;
-  padding: 2rem;
-  margin: 1.5rem;
-  transition: transform ease-out 300ms;
-  box-shadow: 0 2px 39px 9px #E5E8E8;
-
-  &:hover {
-    transform: translateY(-2rem) scale(1.1);
-    transition: transform ease-out 300ms;
-    box-shadow: 0 2px 39px 9px #C2EFFB;
-  }
 
   h3 {
     line-height: 5rem;
