--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -15,20 +15,34 @@
   display: flex;
   justify-content: center;
 
-  img {
-    width: 60px;
-    margin: 5vmin 2vmin;
-    transition: ease-in 300ms;
-    cursor: pointer;
-
-    &:hover {
-      filter: invert(100%) sepia(17%) saturate(3387%) hue-rotate(176deg) brightness(102%) contrast(98%);
-      transition: ease-in 300ms;
-    }
-  }
 
   .contact-logo-item {
     transition: ease-out 300ms;
-  }
 
+    img {
+      width: 60px;
+      margin: 5vmin 2vmin;
+      transition: ease-in 300ms;
+      cursor: pointer;
+
+      &:hover {
+        filter: invert(100%) sepia(17%) saturate(3387%) hue-rotate(176deg) brightness(102%) contrast(98%);
+        transition: ease-in 300ms;
+      }
+    }
+  }
 }
+
+// .contact-tooltip {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: rgba($color: #000000, $alpha: 0.5);
+//   width: fit-content;
+//   height: fit-content;
+//   padding: 0.5rem;
+//   border-radius: 5px;
+//   color: $white-color;
+//   position: absolute;
+//   z-index: 1;
+// }
