Completed projects section

--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -34,13 +34,13 @@
       color: $white-color;
       position: absolute;
       z-index: 1;
-      top: -0.7rem;
-      left: -1.2rem;
+      top: -0.2rem;
+      left: -0.9rem;
     }
 
     img {
       // width: 60px;
-      margin: 5vmin 2vmin;
+      margin: 3rem 1.5rem;
       transition: ease-in 300ms;
       cursor: pointer;
 
