--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -10,16 +10,42 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .project-card {
-  display: flex;
-  background-color: $white-color;
   width: 70%;
   max-width: 100vmin;
-  
+  margin-bottom: 5vmin;
+}
 
-  img {
-    width: 0.3*100vmin;
+
+.project-card-container {
+  display: flex;
+  background-color: $white-color;
+  width: 100%;
+  border-radius: 5px;
+  
+  .wrapper-left {
+    position: relative;
+    height: 30vmin;
+    width: 45vmin;
+    border-radius: 5px 0 0 5px;
   }
+
+  .wrapper-right {
+    padding: 2rem;
+  }
+
+  .wrapper-left-1 {
+    background: url('./../../image/project1.png') no-repeat center center/cover;
+    box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.5);
+    transition: box-shadow ease-out 300ms;
+
+    &:hover {
+      box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.2);
+      transition: box-shadow ease-out 300ms;
+    }
+  }
+
 }
