Optimized projects and capabilities section layout

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -28,8 +28,8 @@
 
   .wrapper-left {
     position: relative;
-    height: 30vmin;
-    width: 45vmin;
+    display: flex;
+    flex: 1 1 45vmin;
     border-radius: 5px 0 0 5px;
     box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.5);
     transition: box-shadow ease-out 300ms;
