--- a/src/components/capabilities/Capabilities.scss
+++ b/src/components/capabilities/Capabilities.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 320px;
+  flex: 1 1 320px;
 
   h3 {
     line-height: 5rem;
