--- a/src/components/techstack/Techstack.scss
+++ b/src/components/techstack/Techstack.scss
@@ -5,14 +5,14 @@
   background-color: $white-color;
 }
 
-.logos {
+.techstack__logos {
   display: flex;
   text-align: center;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.logo-item {
+.techstack__logo-item {
   height: 130px;
   width: auto;
   margin: 30px;
