--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ img {
   width: 100%;
 }
 
-.section-heading {
+.section__heading {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 1.8rem;
@@ -44,7 +44,7 @@ img {
   padding: 0 10vmin 5vmin;
 }
 
-.script-heading {
+.script__heading {
   font-family: 'Lobster', sans-serif;
   font-weight: 400;
   font-size: 10rem;
