--- a/src/components/landing/Landing.scss
+++ b/src/components/landing/Landing.scss
@@ -7,7 +7,7 @@
 }
 
 
-.dark-overlay {
+.landing__dark-overlay {
   background-color: rgba($color: #000000, $alpha: 0.7);
   height: 100vh;
   display: flex;
@@ -21,7 +21,7 @@
   justify-content: center;
 }
 
-.personal-details {
+.landing__personal-details {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -56,7 +56,7 @@
   justify-content: center;
   align-items: center;
 
-  .landing-heading {
+  .landing__heading {
     font-size: 20vmin;
   }
 }
